--- a/Relvise/index.html
+++ b/Relvise/index.html
@@ -11,7 +11,7 @@
 <body>
         <div class="wrapper">
             <header class="header">
-                <div class="header__container container">
+                <div class="header__container  container">
                     <a href="" class="header__logo">
                         Relvise
                     </a>
@@ -30,9 +30,31 @@
                                 <a href="" class="menu__link">Contact</a>
                             </li>
                         </ul>
-                    </nav>
+                    </nav> 
                 </div>
             </header>
+            <main class="page">
+                <div class="page__main-block main-block">
+                    <div class="main-block__conteiner conteiner">
+                        <div class="main-block__body">
+                            <h1 class="main-block__title">Finance and Consultancy Solution</h1>
+                            <div class="main-block__text">
+                                We know how large objects will act, but things on a small scale.
+                            </div>
+                            <div class="main-block__buttons">
+                                <a href="" class="main-block__button">Get Quote Now</a>
+                                <a href="" class="main-block__button main-block__button_border">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main-block__image _ibg">
+                        <img src="img/mainblock/cover.jpg" alt="cover">
+                    </div>
+                </div>
+            </main>
+            <footer class="footer">
+                down street
+            </footer>
         </div>
         <script src="js/script.js"></script>
 </body>
